--- a/TyDtk/EditExamViewController.xib
+++ b/TyDtk/EditExamViewController.xib
@@ -10,10 +10,12 @@
                 <outlet property="buttonDefult" destination="4vg-2J-OvL" id="hIS-TO-H3h"/>
                 <outlet property="buttonReset" destination="eV0-np-tIF" id="5rv-Us-MCl"/>
                 <outlet property="buttonSave" destination="WIx-NO-cdv" id="9ZG-7a-cuS"/>
-                <outlet property="labTitle" destination="Kce-3u-VFX" id="LVV-AS-e4a"/>
                 <outlet property="textTime" destination="UOE-dI-L5K" id="dZy-YB-Xww"/>
                 <outlet property="textViewRemark" destination="Gwe-ge-zf5" id="fga-Sn-maD"/>
+                <outlet property="textViewWidth" destination="Ejt-Z3-5ZG" id="Iah-Rl-sI7"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="viewHeader" destination="STc-RP-11E" id="meH-UN-8o7"/>
+                <outlet property="viewLine" destination="hSR-ii-WsS" id="msN-sH-Y9G"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -31,29 +33,17 @@
                                 <constraint firstAttribute="height" constant="2" id="SDj-WY-gMb"/>
                             </constraints>
                         </view>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kce-3u-VFX">
-                            <rect key="frame" x="20" y="18" width="335" height="25"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="25" id="Llz-cV-Quc"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <color key="textColor" red="0.37647058823529411" green="0.59999999999999998" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                            <nil key="highlightedColor"/>
-                        </label>
                     </subviews>
                     <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="60" id="Bjr-Sa-4Z3"/>
-                        <constraint firstItem="Kce-3u-VFX" firstAttribute="leading" secondItem="STc-RP-11E" secondAttribute="leading" constant="20" id="FZm-6X-RER"/>
-                        <constraint firstItem="Kce-3u-VFX" firstAttribute="centerY" secondItem="STc-RP-11E" secondAttribute="centerY" id="HOh-H2-s0L"/>
                         <constraint firstAttribute="bottom" secondItem="hSR-ii-WsS" secondAttribute="bottom" id="LJq-8X-Fvq"/>
-                        <constraint firstAttribute="trailing" secondItem="Kce-3u-VFX" secondAttribute="trailing" constant="20" id="PvJ-hA-WYo"/>
                         <constraint firstItem="hSR-ii-WsS" firstAttribute="leading" secondItem="STc-RP-11E" secondAttribute="leading" id="QVR-nA-uFc"/>
                         <constraint firstAttribute="trailing" secondItem="hSR-ii-WsS" secondAttribute="trailing" id="zpk-tA-DPf"/>
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="考试时间：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n0j-FR-GAL">
-                    <rect key="frame" x="61" y="146" width="80" height="20"/>
+                    <rect key="frame" x="41" y="146" width="80" height="20"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="80" id="TA4-dl-crG"/>
                         <constraint firstAttribute="height" constant="20" id="fJB-W0-Z7e"/>
@@ -63,7 +53,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UOE-dI-L5K">
-                    <rect key="frame" x="60" y="174" width="255" height="30"/>
+                    <rect key="frame" x="40" y="174" width="295" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="szd-9A-00s"/>
                     </constraints>
@@ -74,7 +64,7 @@
                     </connections>
                 </textField>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="备注说明：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eoz-cv-Jlk">
-                    <rect key="frame" x="61" y="224" width="80" height="20"/>
+                    <rect key="frame" x="41" y="224" width="80" height="20"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="80" id="YiG-hO-owS"/>
                         <constraint firstAttribute="height" constant="20" id="wiz-cp-jAh"/>
@@ -84,7 +74,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Gwe-ge-zf5">
-                    <rect key="frame" x="60" y="252" width="255" height="150"/>
+                    <rect key="frame" x="40" y="252" width="295" height="150"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="150" id="Ejt-Z3-5ZG"/>
@@ -96,7 +86,7 @@
                     </connections>
                 </textView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="小提示：最多可输入100个字符！" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yVf-vq-4w5">
-                    <rect key="frame" x="60" y="405" width="255" height="20"/>
+                    <rect key="frame" x="40" y="405" width="295" height="20"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="QcU-C1-eV6"/>
                     </constraints>
@@ -105,7 +95,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4vg-2J-OvL">
-                    <rect key="frame" x="60" y="428" width="80" height="20"/>
+                    <rect key="frame" x="40" y="428" width="80" height="20"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="80" id="MXF-pc-DaZ"/>
                         <constraint firstAttribute="height" constant="20" id="bXM-O3-JH3"/>
@@ -120,7 +110,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WIx-NO-cdv">
-                    <rect key="frame" x="60" y="478" width="255" height="35"/>
+                    <rect key="frame" x="40" y="468" width="295" height="35"/>
                     <color key="backgroundColor" red="0.24081095429999999" green="0.64520547120000005" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="35" id="i9S-jd-Hkl"/>
@@ -134,7 +124,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eV0-np-tIF">
-                    <rect key="frame" x="255" y="428" width="60" height="20"/>
+                    <rect key="frame" x="275" y="428" width="60" height="20"/>
                     <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="60" id="jS6-86-xgu"/>
@@ -154,12 +144,12 @@
                 <constraint firstItem="UOE-dI-L5K" firstAttribute="top" secondItem="n0j-FR-GAL" secondAttribute="bottom" constant="8" id="6u1-cm-hOh"/>
                 <constraint firstItem="eoz-cv-Jlk" firstAttribute="top" secondItem="UOE-dI-L5K" secondAttribute="bottom" constant="20" id="76G-62-Odu"/>
                 <constraint firstItem="UOE-dI-L5K" firstAttribute="leading" secondItem="n0j-FR-GAL" secondAttribute="leading" constant="-1" id="AV3-hl-i3c"/>
-                <constraint firstItem="WIx-NO-cdv" firstAttribute="top" secondItem="eV0-np-tIF" secondAttribute="bottom" constant="30" id="AYk-KH-DEh"/>
+                <constraint firstItem="WIx-NO-cdv" firstAttribute="top" secondItem="eV0-np-tIF" secondAttribute="bottom" constant="20" id="AYk-KH-DEh"/>
                 <constraint firstItem="4vg-2J-OvL" firstAttribute="top" secondItem="yVf-vq-4w5" secondAttribute="bottom" constant="3" id="DN2-jZ-TR6"/>
                 <constraint firstItem="Gwe-ge-zf5" firstAttribute="leading" secondItem="UOE-dI-L5K" secondAttribute="leading" id="DhH-By-Ux4"/>
                 <constraint firstItem="4vg-2J-OvL" firstAttribute="leading" secondItem="Gwe-ge-zf5" secondAttribute="leading" id="EUb-Rr-PVj"/>
                 <constraint firstItem="UOE-dI-L5K" firstAttribute="top" secondItem="STc-RP-11E" secondAttribute="bottom" constant="50" id="Ehi-ZC-ybV"/>
-                <constraint firstAttribute="trailing" secondItem="UOE-dI-L5K" secondAttribute="trailing" constant="60" id="M0O-zE-F74"/>
+                <constraint firstAttribute="trailing" secondItem="UOE-dI-L5K" secondAttribute="trailing" constant="40" id="M0O-zE-F74"/>
                 <constraint firstItem="eV0-np-tIF" firstAttribute="bottom" secondItem="4vg-2J-OvL" secondAttribute="bottom" id="a4i-8T-eDO"/>
                 <constraint firstItem="STc-RP-11E" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="bQU-gg-gYL"/>
                 <constraint firstItem="eV0-np-tIF" firstAttribute="trailing" secondItem="Gwe-ge-zf5" secondAttribute="trailing" id="ccm-x5-mY7"/>
@@ -169,7 +159,7 @@
                 <constraint firstItem="Gwe-ge-zf5" firstAttribute="top" secondItem="eoz-cv-Jlk" secondAttribute="bottom" constant="8" id="jbN-O8-2ci"/>
                 <constraint firstItem="WIx-NO-cdv" firstAttribute="trailing" secondItem="Gwe-ge-zf5" secondAttribute="trailing" id="kyL-Ad-ARo"/>
                 <constraint firstItem="yVf-vq-4w5" firstAttribute="leading" secondItem="Gwe-ge-zf5" secondAttribute="leading" id="pZz-9R-Hts"/>
-                <constraint firstItem="UOE-dI-L5K" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="60" id="r6k-ao-VlH"/>
+                <constraint firstItem="UOE-dI-L5K" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="40" id="r6k-ao-VlH"/>
                 <constraint firstItem="Gwe-ge-zf5" firstAttribute="trailing" secondItem="UOE-dI-L5K" secondAttribute="trailing" id="raE-8K-eQs"/>
                 <constraint firstItem="eoz-cv-Jlk" firstAttribute="leading" secondItem="UOE-dI-L5K" secondAttribute="leading" constant="1" id="rf9-8a-NQ4"/>
                 <constraint firstItem="yVf-vq-4w5" firstAttribute="top" secondItem="Gwe-ge-zf5" secondAttribute="bottom" constant="3" id="saY-i3-hjc"/>
