--- a/TyDtk/TopicLookQtpye1TableViewCell.xib
+++ b/TyDtk/TopicLookQtpye1TableViewCell.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <objects>
@@ -59,7 +60,7 @@
                             <color key="titleColor" red="1" green="0.58331439269999996" blue="0.12216659539999999" alpha="1" colorSpace="calibratedRGB"/>
                         </state>
                         <connections>
-                            <action selector="buttonCollectClick:" destination="c4E-to-lTB" eventType="touchUpInside" id="ZfS-iX-pAe"/>
+                            <action selector="buttonCollecClick:" destination="c4E-to-lTB" eventType="touchUpInside" id="NRt-Ar-mcw"/>
                         </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mQU-ES-9ED">
@@ -74,7 +75,7 @@
                             <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                         <connections>
-                            <action selector="buttonErrorClick:" destination="c4E-to-lTB" eventType="touchUpInside" id="Txa-l5-eHz"/>
+                            <action selector="buttonErroClick:" destination="c4E-to-lTB" eventType="touchUpInside" id="vjL-M3-oQQ"/>
                         </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oeH-bs-Kp5">
@@ -89,7 +90,7 @@
                             <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                         <connections>
-                            <action selector="buttonNoteClick:" destination="c4E-to-lTB" eventType="touchUpInside" id="TCt-fh-DBN"/>
+                            <action selector="buttonNotClick:" destination="c4E-to-lTB" eventType="touchUpInside" id="wY1-BO-q2P"/>
                         </connections>
                     </button>
                     <webView tag="10" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lzd-W3-9h7">
@@ -119,10 +120,10 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="buttonCollect" destination="lwM-sX-PqG" id="5tY-IR-w9W"/>
+                <outlet property="buttonCollect" destination="lwM-sX-PqG" id="qrF-iu-hHq"/>
                 <outlet property="buttonCollectWidth" destination="dDT-YI-g4m" id="NPe-I7-XVd"/>
-                <outlet property="buttonError" destination="mQU-ES-9ED" id="k0e-4G-azd"/>
-                <outlet property="buttonNote" destination="oeH-bs-Kp5" id="PvC-I5-8cZ"/>
+                <outlet property="buttonErro" destination="mQU-ES-9ED" id="arb-G8-JDs"/>
+                <outlet property="buttonNot" destination="oeH-bs-Kp5" id="mRc-6R-9SC"/>
                 <outlet property="imageVIewCollect" destination="x0i-Rf-kgr" id="aFv-Ps-Xkh"/>
                 <outlet property="labNumberWidth" destination="Nci-v0-4iJ" id="2JK-u5-FbW"/>
                 <outlet property="labTopicNumber" destination="2sJ-oF-caO" id="G6O-rg-Hhm"/>
