--- a/TyDtk/TyUserIn.storyboard
+++ b/TyDtk/TyUserIn.storyboard
@@ -830,7 +830,7 @@
                                                     <subviews>
                                                         <button opaque="NO" tag="101" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eqz-SX-XIZ">
                                                             <rect key="frame" x="20" y="14" width="275" height="35"/>
-                                                            <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                                            <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="35" id="cPR-Er-Rji"/>
                                                             </constraints>
