--- a/TyDtk/ActiveSubjetView.xib
+++ b/TyDtk/ActiveSubjetView.xib
@@ -24,7 +24,7 @@
                         <constraint firstAttribute="height" constant="25" id="kj9-eI-4Tc"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="价 格:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="utf-10-Vg5">
@@ -43,13 +43,13 @@
                         <constraint firstAttribute="width" constant="40" id="ogs-ej-exp"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NHS-56-6QA">
-                    <rect key="frame" x="198" y="130" width="92" height="23"/>
+                    <rect key="frame" x="198" y="128" width="92" height="25"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="23" id="Tzs-R6-cHU"/>
+                        <constraint firstAttribute="height" constant="25" id="Tzs-R6-cHU"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <state key="normal" title="激活码做题"/>
@@ -58,9 +58,9 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9de-H1-cCY">
-                    <rect key="frame" x="300" y="130" width="92" height="23"/>
+                    <rect key="frame" x="300" y="128" width="92" height="25"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="23" id="x9j-RD-cQH"/>
+                        <constraint firstAttribute="height" constant="25" id="x9j-RD-cQH"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <state key="normal" title="直接去购买"/>
@@ -74,7 +74,7 @@
                         <constraint firstAttribute="height" constant="20" id="hmZ-6m-gEf"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GZr-xF-ZEQ">
@@ -83,7 +83,7 @@
                         <constraint firstAttribute="height" constant="20" id="7BW-Yd-Cfu"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
