--- a/TyDtk/TyCommon.storyboard
+++ b/TyDtk/TyCommon.storyboard
@@ -31,7 +31,7 @@
                                             <constraint firstAttribute="height" constant="25" id="Nld-0G-2Gf"/>
                                         </constraints>
                                     </imageView>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="邮箱/手机号" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="wTE-N0-7R5">
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="手机号/邮箱/用户名" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="wTE-N0-7R5">
                                         <rect key="frame" x="35" y="10" width="270" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="yAS-h1-Cbf"/>
